--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: ci-test
 
 on:
@@ -10,20 +7,35 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   test:
     name: Test
     runs-on: ubuntu-latest
-    steps:
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v4
-      with:
-        go-version: ^1.22
-      id: go
-    
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
-    
-    - name: Test
-      run: make test
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simplebank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v4
+        with:
+          go-version: ^1.22
+        id: go
+
+      - name: Run migrations
+        run: make migrateup
+
+      - name: Test
+        run: make test
