--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,5 +7,5 @@ packages:
     engine: "postgresql"
     emit_json_tags: true
     emit_prepared_queries: false
-    emit_interface: false
+    emit_interface: true
     emit_empty_slices: true
